--- a/Site/views/home.ejs
+++ b/Site/views/home.ejs
@@ -4,7 +4,9 @@
 
 	<body>
 		<%- include('partials/header') %>
-	
+		
+	<div class="home">
+
 	
 			<!-- COMIENZO DE CARROUSEL-->
 			<script>
@@ -218,6 +220,9 @@
 			  </div>
 		</div>
 	  </section> 
+
+	</div>
+
 
 	  <%- include('partials/footer') %>
 
