--- a/Site/views/productDetails.ejs
+++ b/Site/views/productDetails.ejs
@@ -10,7 +10,10 @@
 
 
  <br><br>
-    <section class="calesita">
+
+ <div class="container my-4"> 
+    <div class="row">
+    <section class="calesita col-md-6">
         <div class="container carousel">
             <div class="row">
                 <!-- COMIENZO DE CARROUSEL-->
@@ -63,7 +66,7 @@
         </div>
     </section>
 
-    <section class="detalle"> 
+    <section class="detalle col-md-6"> 
         <div class="container">
             <div class="row">
                 <div class="titulo col-12">
@@ -91,13 +94,18 @@
                     </div>
             </div> 
             </div>    
-        </div>        
-    </section>
+        </div> 
+        
         <div class="d-grid gap-2">
             <button class="btn btn-primary" type="button"><i class="fas fa-shopping-bag"></i>COMPRAR AHORA</button>
             <button class="btn btn-primary" type="button"><i class="fas fa-shopping-cart"></i>AGREGAR AL
                 CARRITO</button>
         </div>
+    </section>
+
+    </div>
+    </div>
+    
 
 
         
