--- a/Site/public/stylesheets/home.css
+++ b/Site/public/stylesheets/home.css
@@ -1,9 +1,11 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,700;1,400&display=swap');
 
-.carrousel {
+.home.carrousel {
   display: none;
 }
+
+ 
 
 .carrousel-item img{
     height: 200px;
