--- a/Site/public/stylesheets/iniciar.css
+++ b/Site/public/stylesheets/iniciar.css
@@ -55,6 +55,8 @@ body{
     color: #797979;
     margin-bottom: 30px;
   }
+
+ 
    
   .register input{
     width: 100%;
@@ -73,6 +75,10 @@ body{
     outline: none;
   }
    
+  .register #recordar{
+    width: autopx;
+  }
+
   .register .submit {
     padding: 10px;
     background: #30475e;
