--- a/Site/views/partials/header.ejs
+++ b/Site/views/partials/header.ejs
@@ -31,9 +31,9 @@
                   Ingresá <i class="fas fa-address-card"></i></button></a>
               <%  } %>
 
-        <a href="/">
+        <a href="/products">
           <button class="btn btn-outline-light">
-            Guardado <i class="fas fa-heart"></i></button></a>
+            Productos <i class="fas fa-heart"></i></button></a>
 
 
       </div>
