--- a/Site/views/products.ejs
+++ b/Site/views/products.ejs
@@ -21,12 +21,12 @@
                   </li>
       
                   <li class="list-group-item">
-                    <h6>
+                    <h6 class="precioF">
                      Precio final $<%= producto.price %>
                     </h6>
                   </li>
                   <li class="list-group-item">
-                    <p>Categoria</p>
+                    <p class="categoria">Categoria</p>
                     <h5 class="button type4"> <%= producto.category %></h5>
                   </li>
 
