--- a/Site/views/registro.ejs
+++ b/Site/views/registro.ejs
@@ -30,17 +30,17 @@
 
                   <div>
                     <input type="text" placeholder="Apellido" class="apellido" name="lastName"> 
-                    <span class="text-danger"><%= (typeof errores != 'undefined' && errores.username)?errores.username.msg : "" %> </span>
+                    <span class="text-danger"><%= (typeof errores != 'undefined' && errores.username)?errores.username.msg : "El campo nombre es requerido" %> </span>
                 </div>
 
                 <div>
                     <input type="email" placeholder="Email" class="email" name="email">
-                    <span class="text-danger"><%= (typeof errores != 'undefined' && errores.username)?errores.username.msg : "" %> </span>
+                    <span class="text-danger"><%= (typeof errores != 'undefined' && errores.username)?errores.username.msg : "El campo apellido es requerido" %> </span>
                 </div>
 
                 <div>
                     <input type="password" placeholder="Contraseña" class="pass" name="password">
-                    <span class="text-danger"><%= (typeof errores != 'undefined' && errores.pass)?errores.pass.msg : "" %> </span>
+                    <span class="text-danger"><%= (typeof errores != 'undefined' && errores.pass)?errores.pass.msg : "El campo contraseña es requerido y debe tener entre 6 y 12 caracteres" %> </span>
                 </div>
 
                 <div>
