arreglo de css de boton recordar

--- a/Site/public/stylesheets/iniciar.css
+++ b/Site/public/stylesheets/iniciar.css
@@ -179,6 +179,10 @@ label {
   margin-left: 5px;
 }
 
+#recordar { 
+width: 7%;
+border-radius: 67px; 
+}
  /*RESPONSIVE*/
 
  @media(min-width:768px) {
