--- a/Site/views/home.ejs
+++ b/Site/views/home.ejs
@@ -63,16 +63,16 @@
 			  <% visitados.forEach(product => { %>
 				<div class="col-12 col-md-6 col-lg-3">
 					<div class="contenido">
-						<a href="products/detail/<%-product.id%>">	
+						<a href="/product/detail/<%=product.id%>">	
 							<div>
-								<img src="<%-images.file%>" alt="Imagen del producto">
+								<img src="<%=product.images[0].file%>" alt="Imagen del producto" class="img-fluid">
 								</div>
 							<div class="datos">
-								<h3>$<%- products.price - (products.price / 100 * products.discount) %> </h3>
-								<% if (products.discount > 0) { %>
-									<span><%- products.discount %> % OFF</span>
+								<h3>$<%= product.price - (product.price / 100 * product.discount) %> </h3>
+								<% if (product.discount > 0) { %>
+									<span><%= product.discount %> % OFF</span>
 								<% } %>
-								<p><%- products.name %> </p>
+								<p><%= product.name %> </p>
 								<i class="fas fa-truck"></i>
 							</div>
 							</div>
@@ -90,19 +90,19 @@
 			  <!-- <div class="col-12 col-md-6 col-lg-3">
 				<div class="contenido"> -->
 
-					<% enOferta.forEach(producto => { %>
+					<% enOferta.forEach(product => { %>
 						<div class="col-12 col-md-6 col-lg-3">
 							<div class="contenido">
-								<a href="products/detail/<%- product.id %> ">	
+								<a href="/products/detail/<%- product.id %> ">	
 									<div>
-										<img src="<%-images.file%>" alt="Imagen del producto">
+										<img src="<%=product.images[0].file%>" alt="Imagen del producto" class="img-fluid">
 										</div>
 									<div class="datos">
-										<h3>$<%-products.price - (products.price / 100 * products.discount) %> </h3>
-										<% if (products.discount > 0) { %>
-											<span><%-products.discount%> % OFF</span>
+										<h3>$<%=product.price - (product.price / 100 * product.discount) %> </h3>
+										<% if (product.discount > 0) { %>
+											<span><%=product.discount%> % OFF</span>
 										<% } %>
-										<p><%-products.name%> </p>
+										<p><%=product.name%> </p>
 										<i class="fas fa-truck"></i>
 									</div>
 									</div>
