--- a/Site/views/error.ejs
+++ b/Site/views/error.ejs
@@ -1,3 +1,4 @@
+<img src="/images/error/broken_robot.png" width="40% ">
 <h1><%= message %></h1>
 <h2><%= error.status %></h2>
 <pre><%= error.stack %></pre>
