--- a/Site/views/iniciar.ejs
+++ b/Site/views/iniciar.ejs
@@ -23,7 +23,6 @@
                 <div class="register">
                   <h2 class="text1">¡Hola! Para continuar iniciar sesión</h2>
                   <form action="/users/iniciar" method="POST">
-                    <!--<input type="text" placeholder="Nombre" class="nombre"> -->
                     <input type="text" placeholder="Correo" class="correo" name="email">
                     <span class="text-danger"><%= (typeof errores != 'undefined' && errores.username)?errores.username.msg : "" %> </span>
                     <input type="password" placeholder="Contraseña" class="pass" name="pass">
@@ -42,14 +41,14 @@
                       <span class="text-danger"><%= (typeof errores != 'undefined' && errores.error())?errores.pass.msg : "" %> </span>
 
                 </div>
-               <!-- <div class="login">
+               <div class="login">
                   <h2 class="iniciar">Iniciar cuenta con</h2>
                   <div class="login-items">
                     <button class="fb"><i class="fab fa-facebook-f"></i> Acceder con Facebook</button>
                     <button class="tw"><i class="fab fa-twitter"></i> Acceder con Twitter</button>
                     <button class="correo"><i class="fab fa-google-plus-g"></i> Acceder con Correo</button> 
                   </div> 
-                </div> -->
+                </div>
               </div>
             </div>
           </div>
