--- a/Site/views/iniciar.ejs
+++ b/Site/views/iniciar.ejs
@@ -25,7 +25,7 @@
                   <form action="/users/iniciar" method="POST">
                     <input type="text" placeholder="Correo" class="correo" name="email">
                     <span class="text-danger"><%= (typeof errores != 'undefined' && errores.username)?errores.username.msg : "" %> </span>
-                    <input type="password" placeholder="Contraseña" class="pass" name="pass">
+                    <input type="password" placeholder="Contraseña" class="password" name="password">
                     <span class="text-danger"><%= (typeof errores != 'undefined' && errores.pass)?errores.pass.msg : "" %> </span>
                     <input type="submit" class="submit" value="INICIAR">
                     <div class="form-check d-flex justify-content-center mt-4">
@@ -38,7 +38,7 @@
                   </form>
                   <a href="/users/registro" style="color: #30475e;">
                       <h1 class="noLogin">¿Aún no estás registrado?</h1>
-                      <span class="text-danger"><%= (typeof errores != 'undefined' && errores.error())?errores.pass.msg : "" %> </span>
+                      <span class="text-danger"><%= (typeof errores != 'undefined' && errores.pass)?errores.pass.msg : "" %> </span>
 
                 </div>
                <div class="login">
