profile user & admin

--- a/Site/views/perfil.ejs
+++ b/Site/views/perfil.ejs
@@ -8,8 +8,8 @@
     </script>
 
     <div class="profile">
-        <h1><%=user.name%> <%=user.lastname%></h1>
-        <img class= "avatar" src="/images/users/<%=user.avatar%>" alt="">
+        <h1> Hola! <%=user.name%> <%=user.lastname%></h1>
+        <img class= "avatar" src="/images/avatares/<%=user.avatar%>" alt="">
         <a  href='/user/iniciar'> Cerrar sessión </a>
     </div>
     <%-include("./partials/footer")%>
