--- a/Site/views/registro.ejs
+++ b/Site/views/registro.ejs
@@ -47,7 +47,7 @@
                   <p>Imagen de perfil<input type="file" placeholder="selecciona tu foto de perfil" name="avatar"></p> 
                 </div>
                     
-                    <input type="submit" class="submit" value="INICIAR">
+                    <input type="submit" class="submit" value="REGISTRARME">
                   </form>
                   <a href="/users/iniciar" style="color: #30475e;">
                       <h1 class="noLogin">¿Estás registrado? <a href="/iniciar"></a>Inicia sesión</h1>
